--- a/MVP/llama_test.ipynb
+++ b/MVP/llama_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Participated with meaningful points in open session',\n",
+       " 'Wellness presentation about mental health was good, although it was a bit short. The activity was enjoyable.',\n",
+       " 'Some sidetalking in class.']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = SheetsAPI()\n",
     "values = s.get_sheet_values(\n",
@@ -31,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -44,26 +57,26 @@
     }
    ],
    "source": [
-    "query = f\"\"\"Convert this list of notes into a paragraph.\\n Notes: {d['Aryan']}\"\"\"\n",
-    "print(query)"
+    "prompt = f\"\"\"Convert this list of notes into a paragraph.\\n Notes: {d['Aryan']}\"\"\"\n",
+    "print(prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = replicate.Client(api_token=REPLICATE_API_TOKEN)\n",
     "output = client.run(\n",
     "    \"meta/llama-2-70b-chat:2c1608e18606fad2812020dc541930f2d0495ce32eee50074220b87300bc16e1\",\n",
-    "    input={'prompt': query}\n",
+    "    input={'prompt': prompt}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Here's a paragraph based on the given notes:\n",
-      "\n",
-      "\"During the open session, I actively participated by sharing meaningful points. Later, we had a wellness presentation about mental health, which was informative and engaging, although it could have been longer. Afterward, we enjoyed an activity that helped us relax and bond with each other. Unfortunately, there were instances of side talking in class, which we will work on improving for future sessions.\"\n"
+      " During the open session, I actively participated by sharing meaningful points. Later, we had a wellness presentation on mental health, which was beneficial but slightly brief. Despite this, the accompanying activity was quite enjoyable. Unfortunately, there were instances of side talking in class, which disrupted the learning environment.\n"
      ]
     }
    ],
