--- a/MVP/llama_test.ipynb
+++ b/MVP/llama_test.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google.auth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eriwang/Desktop/Software Engineering/Eval-AI/MVP/llama_test.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msheets_api\u001b[39;00m \u001b[39mimport\u001b[39;00m SheetsAPI\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mreplicate\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdotenv\u001b[39;00m \u001b[39mimport\u001b[39;00m load_dotenv\n",
+      "File \u001b[0;32m~/Desktop/Software Engineering/Eval-AI/MVP/sheets_api.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpath\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mauth\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtransport\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrequests\u001b[39;00m \u001b[39mimport\u001b[39;00m Request\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moauth2\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcredentials\u001b[39;00m \u001b[39mimport\u001b[39;00m Credentials\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle_auth_oauthlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mflow\u001b[39;00m \u001b[39mimport\u001b[39;00m InstalledAppFlow\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google.auth'"
+     ]
+    }
+   ],
    "source": [
     "from sheets_api import SheetsAPI\n",
     "import replicate\n",
@@ -17,20 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Participated with meaningful points in open session',\n",
-       " 'Wellness presentation about mental health was good, although it was a bit short. The activity was enjoyable.',\n",
-       " 'Some sidetalking in class.']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'SheetsAPI' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/eriwang/Desktop/Software Engineering/Eval-AI/MVP/llama_test.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m s \u001b[39m=\u001b[39m SheetsAPI()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m values \u001b[39m=\u001b[39m s\u001b[39m.\u001b[39mget_sheet_values(\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mrange\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mStudent Notes!A:OZ\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     sheet_id\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m1_-qCpMMQcA5NDnfGbXa4D79ki-Rjjz-gnyb2KXiNdsQ\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/eriwang/Desktop/Software%20Engineering/Eval-AI/MVP/llama_test.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m d \u001b[39m=\u001b[39m s\u001b[39m.\u001b[39mget_dict_from_sheet_values(values)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'SheetsAPI' is not defined"
+     ]
     }
    ],
    "source": [
@@ -44,15 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Convert this list of notes into a paragraph.\n",
-      " Notes: ['Participated with meaningful points in open session', 'Wellness presentation about mental health was good, although it was a bit short. The activity was enjoyable.', 'Some sidetalking in class.']\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/opt/homebrew/bin/python3' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
@@ -63,9 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/opt/homebrew/bin/python3' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "client = replicate.Client(api_token=REPLICATE_API_TOKEN)\n",
     "output = client.run(\n",
@@ -76,23 +101,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/opt/homebrew/bin/python3' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "result = [item for item in output]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " During the open session, I actively participated by sharing meaningful points. Later, we had a wellness presentation on mental health, which was beneficial but slightly brief. Despite this, the accompanying activity was quite enjoyable. Unfortunately, there were instances of side talking in class, which disrupted the learning environment.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/opt/homebrew/bin/python3' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
@@ -117,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
